<resources>
    <string name="app_name">d2jsp Transaction Tracker</string>
    <string name="fragment_title_add">Add Transaction</string>
    <string name="fragment_title_list">List of Transactions</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lbl_type">Type: </string>
    <string name="lbl_transaction_type">Type: </string>
    <string name="lbl_transaction_name">Name: </string>
    <string name="lbl_transaction_iggAmnt">igg Amnt: </string>
    <string name="lbl_transaction_fgAmnt">fg Amnt: </string>
    <string name="lbl_transaction_add">Add Transaction</string>
    <string name="lbl_radio_sold">Sold</string>
    <string name="lbl_radio_purchased">Purchased</string>

    <string name="lbl_alert_confirm_title">Confirm Delete!</string>

    <string-array name="transaction_type_array">
        <item>Sold</item>
        <item>Purchased</item>
    </string-array>


</resources>
